# asm-att

./: Makefile  README.md  c.s  ctest-c.s  demo.s  gmon.out  gprof.txt  meson.build  syscall.c  test.s
chap04/: Makefile  cpuid2-64.s
conf/: meson.build  qemu-aarch64.conf  qemu-mips64el.conf  qemu-mipsel.conf  qemu-riscv64.conf  qemu-x86_64.conf
cross/: linux-aarch64.txt  linux-i686.txt  linux-la64.txt  linux-mips32.txt  linux-mips64.txt  linux-riscv64.txt
docs/: README  README-x86.md  arm-isa.txt  gas.md  la64-isa.txt  la64-relocation.txt  mips-isa.txt  riscv-asm.md  riscv.md
include/: syscalls.la64.inc
src/: meson.build
src/aarch64/: a.c
src/include/: gensyscall.sh  syscalls.x64.inc
src/la64/: meson.build
src/la64/01-add-sub/: add-sub.S  addi.S  alsl.S  and-or.S  div-mod.S  luxxi.S  meson.build  mul.S  pcadd.S  slt.S
src/la64/02-shift-bit/: meson.build  sll.S
src/la64/03-bit/: clo-clz.S  ext.S
src/la64/common/: meson.build  regdump.c  反汇编.S
src/la64/hello/: hello.S  hello2.S  hello3.S  meson.build
src/la64/regdump/: meson.build  test.S
src/loong64/01-add-sub/: add-sub.S  addi.S  alsl.S  and-or.S  div-mod.S  luxxi.S  mul.S  pcadd.S  slt.S
src/loong64/02-shift-bit/: sll.S
src/loong64/03-bit/: clo-clz.S  ext.S  meson.build
src/loong64/common/: Makefile  regdump.S
src/loong64/hello/: hello.S  hello2.S  hello3.S  string.S  strlen.c
src/loong64/regdump/: regdump.S  regdump.c  test.S
src/mips64/: meson.build
src/mips64/common/: define.inc
src/mips64/hello/: hello-mips.S  meson.build
src/mips64/input/: input-mips64el.S  meson.build
src/mips64/string/: bzero.S  meson.build  strcmp-mips64el.S
src/mips64/z/: meson.build  z-mips.S
src/riscv64/: README.md  meson.build
src/riscv64/common/: define.inc
src/riscv64/functions/: args.S  cmdline.S  env.S  fun.c  func.S  meson.build
src/riscv64/hello/: Makefile  hello.S  meson.build
src/riscv64/quicksort/: compile.sh  debug.sh  main.S  meson.build  quicksort.S  quicksort.py
src/riscv64/sum/: meson.build  sum.S
src/sw64/exit/: exit.S  regdef.inc
src/x64/01-cpuid/: cpuid.S  meson.build
src/x64/02-hello/: hello-asm.asm  meson.build  sss.c
src/x64/03-basic/: meson.build  stack.S
src/x64/04-sum/: meson.build
src/x64/05-data/: cmovtest.S
src/x64/07-number/: convtest.S  meson.build
src/x64/11-functions/: cmdline.S
src/x64/18-casm/casm1/: casm.c  meson.build
src/x86/: meson.build
src/x86/00-boot/: Makefile  README.txt  boot-i686.S  boot-i686.img  boot.ld  floppy-i686.S  floppy-i686.img
src/x86/01-cpuid/: Makefile  cpuid.i686.S  cpuid2.i686.S  cpuid3.S  meson.build
src/x86/010-env/: args.S  argv.S  meson.build
src/x86/02-hello/: hello-i686.S  hello.asm  meson.build
src/x86/05-data/: Makefile  bubble-i686.S  cmovtest-i686.S  meson.build  pushpop-i686.S
src/x86/06-control/: meson.build
src/x86/07-number/: meson.build
src/x86/08-math/: meson.build
src/x86/09-adv-math/: meson.build
src/x86/10-string/: Makefile  meson.build
src/x86/11-functions/: args-i386.S  functest1-i686.S  functest2-i686.S  functest3-i686.S  meson.build  paramtest1-i686.S  paramtest2-i686.S  paramtest3-i686.S
src/x86/11-functions/funcs/: area-i686.S  functest4-i686.S  meson.build
src/x86/12-syscall/: meson.build  syscall.c
src/x86/13-inline/: meson.build  swap.c
src/x86/14-asmlib/: meson.build
src/x86/18-casm/casm1/: casm.asm
src/x86/18-casm/casm2/: casm.c
src/x86/chap15/: meson.build
src/x86/chap16/: meson.build
src/x86/chap17/: meson.build
src/x86/x86_64/: isa.txt  meson.build
src/x86/x86_64/01-cpuid/: cpuid2.S  cpuid3.S
src/x86/x86_64/02-hello/: hello-main.S  hello.S
src/x86/x86_64/03-basic/: triangle.S  triangle.asm
src/x86/x86_64/04-sum/: sum.S  sum.asm
src/x86/x86_64/05-data/: meson.build
src/x86/x86_64/09-adv-math/: meson.build  reverse-x86_64.asm
src/x86/x86_64/10-string/: meson.build
src/x86/x86_64/11-functions/: meson.build  mylib.S
src/x86/x86_64/18-casm/: meson.build
src/x86/x86_64/18-casm/casm1/: casm.asm
src/x86/x86_64/18-casm/casm2/: Makefile  meson.build
src/x86/x86_64/18-casm/casm3/: meson.build
