subdir('01-cpuid')
subdir('02-hello')
subdir('05-data')
subdir('06-control')
subdir('07-number')
subdir('08-math')
subdir('09-adv-math')
subdir('10-string')
subdir('11-functions')
subdir('12-syscall')
subdir('13-inline')
subdir('14-asmlib')
subdir('010-env')
subdir('chap15')
subdir('chap16')
subdir('chap17')
